--- a/launcher.html
+++ b/launcher.html
@@ -28,8 +28,8 @@
     </style>
 </head>
 <body>
-    <!-- 【請務必修改這裡！】將 src 替換成您自己的 Google Apps Script .../exec 網址 -->
-    <iframe src="YOUR_GOOGLE_APPS_SCRIPT_URL_HERE"></iframe>
+    <!-- https://script.google.com/macros/s/AKfycbxFd_fV6nMyUTLVtdOPZuJiSvGmHUTbtcSerbSF6Loyc_losgaHdEw0HcETF4Mobe2u/exec-->
+    <iframe src="https://script.google.com/macros/s/AKfycbxFd_fV6nMyUTLVtdOPZuJiSvGmHUTbtcSerbSF6Loyc_losgaHdEw0HcETF4Mobe2u/exec"></iframe>
 
     <script>
         // 註冊 Service Worker
