--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="default">
     <meta name="apple-mobile-web-app-title" content="我的帳本">
-    <link rel="apple-touch-icon" href="https://i.imgur.com/gcyiR3h.png">
+    <link rel="apple-touch-icon" href="https://i.meee.com.tw/TewFI9w.png">
     <meta name="theme-color" content="#FDFBF8">
     <link rel="manifest" href="manifest.json">
 
